<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reu"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/reu" />
        <item
            android:id="@+id/nav_gente"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/people" />
        <item
            android:id="@+id/nav_galeria"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/gallery" />

        <item
            android:id="@+id/nav_notificacion"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/notifications" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/options" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
