<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrarReuFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilReuNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtReuNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilReuClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtReuClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reu_type" />

    <Spinner
        android:id="@+id/spnTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilLugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtLugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/place"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnMapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_map" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilInvitado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/edtInvitado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_people"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnInvitado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/invite_people" />

    </LinearLayout>

    <Button
        android:id="@+id/btnGrabar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />


</LinearLayout>