<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".RegistrarActorActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Registro de Usuario"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtDni"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Genero" />

    <RadioGroup
        android:id="@+id/rgSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbMasculino"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/male"></RadioButton>

        <RadioButton
            android:id="@+id/rbFemenino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telephone"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnGrabar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="------"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>